# devdock

./: .gitignore  README.md  package-lock.json  package.json  turbo.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/.sqlx/: query-029a1ae6db8c939847040f36149dc7431dcbffaa9f1ea008bc526ac5fb55db86.json  query-0b5ce0b1e2d30068e9b9f3bb2f99f02ae474105a4036d064e69df2d7410b4455.json  query-445af6b07fa9b3599004e516d4692026aecc422974fd1c9e0e8742e0d3fe5254.json  query-5f6f514abf7d1539d82cdee6d31101ec3fb0cc5e7dc7b487c35777bc6bfc9dd7.json  query-8c502bb7a42b727c5f62198fc520157a468f96a08c69e1c2ade5a80618227bd6.json  query-9c8e158c2632bb4cdc541e59e1f46ad23eb70b115d2b65991c241220430fb0bf.json  query-dc742be8d399f72ba551deff6b204e03473153a9be7dbf859b917cd57bb91546.json  query-eaf3ca3f67ddd48a787952e79d00a345b67fcbd2627b721bbcfed1b555fa697d.json  query-eb97e81b71ec374b4b41462310f61fbbb0076cae7ef8f08969b0d5b51b590cb0.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/migrations/: 0002_intelligence_schema.sql  0003_integration_schema.sql  0004_structured_notes.sql  0006_sync_support.sql  0007_tech_breakdown.sql
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/auth/: auth_commands.rs  mod.rs  token_refresh.rs
apps/desktop/src-tauri/src/commands/: avatar_commands.rs  deps_commands.rs  health_commands.rs  ide_commands.rs  mod.rs  notes_commands.rs  project_commands.rs  updater_commands.rs  workspace_commands.rs
apps/desktop/src-tauri/src/models/: git_status.rs  ide_config.rs  mod.rs  (+3 more)
(+212 files in other folders)
