[package]
name = "devdock"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "devdock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "migrate"] }
uuid = { version = "1.22.0", features = ["v4"] }
tokio = { version = "1.50.0", features = ["full"] }
chrono = { version = "0.4.44", features = ["serde"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
git2 = { version = "0.20.4", default-features = false, features = ["default"] }
reqwest = { version = "0.13.2", features = ["json"] }
toml = "1.0.7"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "sync-secret-service"] }
fuzzy-matcher = "0.3.7"
tauri-plugin-updater = "2.10.0"
tokio-retry = "0.3"
tauri-plugin-deep-link = "2"

[dev-dependencies]
tempfile = "3.27.0"

